--- a/deploy/src/App/FrontEndBundle/Resources/views/layout.html.twig
+++ b/deploy/src/App/FrontEndBundle/Resources/views/layout.html.twig
@@ -11,11 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no"/>
 
     <meta name="keywords"
-          content="{% block metaKeywords %}Air Force, USAF, United States, military, airplane, flight, air, space, cyberspace, recruit, enlisted, officer, healthcare, jet, plane, pilot, above all, homepage, home, airman{% endblock %}">
+          content="{% block metaKeywords %}{% endblock %}">
     <meta name="description"
-          content="{% block metaDescription %}Welcome to the United States Air Force. Learn about great opportunities for enlisted airmen, officers and health care professionals.{% endblock %}">
+          content="{% block metaDescription %}{% endblock %}">
 
-    <title>{% block pageTitle %}U.S. Air Force{% endblock %}</title>
+    <title>{% block pageTitle %}Spectrum Reach{% endblock %}</title>
 
     <meta name="document-base"
           content="{{ app.request.getScheme() }}://{{ app.request.getHost() }}{{ app.request.baseUrl }}/"/>
