--- a/deploy/src/App/FrontEndBundle/Resources/views/Home/index.html.twig
+++ b/deploy/src/App/FrontEndBundle/Resources/views/Home/index.html.twig
@@ -1,1 +1,7 @@
 {% extends 'AppFrontEndBundle::layout.html.twig' %}
+{% block body %}
+    {% block content %}
+        <h1>Hello world</h1>
+        <a href="/test">Go to link</a>
+    {% endblock %}
+{% endblock %}
