--- a/deploy/src/App/FrontEndBundle/Resources/views/layout.html.twig
+++ b/deploy/src/App/FrontEndBundle/Resources/views/layout.html.twig
@@ -31,6 +31,8 @@
           content="http://e9d44f56cc6e9f675d09-3df7d823593f18aeceff8c2eebacaa4f.r27.cf1.rackcdn.com/static/fb/fb_icon_1024.jpg"/>
     <meta property="fb:app_id" content="1540630069584173"/>
 
+    {% block stylesheets %}{% endblock %}
+
     <!--<link href="inc/style/screen.css" rel="stylesheet" type="text/css"/>
     <script src="inc/script/lib/modernizr/modernizr.js"></script>
     <link rel="shortcut icon" href="inc/image/favicon.ico" type="image/x-icon"/>-->
