--- a/deploy/htdocs/version/src/inc/style/utility/_variables.scss
+++ b/deploy/htdocs/version/src/inc/style/utility/_variables.scss
@@ -13,6 +13,10 @@ $spriteDefault: 'sprite-default.png';
 $fontArial: Arial, sans-serif;
 
 // Sizes
+$largeSiteFrame: 1600px;
+$mediumSiteFrame: 1440px;
+$smallSiteFrame: 1280px;
+
 
 // Colors
 $colorMain: #000;
