--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
@@ -1,3 +1,3 @@
 <div class="component-block-hero-main">
-	<p>Component block-hero-main creation succesful! Enjoy!</p>
+	<img src="data/hero-main/slide-1.jpg" alt="">
 </div>
