--- a/deploy/htdocs/version/src/inc/template/index.html
+++ b/deploy/htdocs/version/src/inc/template/index.html
@@ -1,1 +1,15 @@
-<div data-gaia-container="index"></div>
+<div class="site-frame">
+
+	<!-- ko component: {
+		name: 'header',
+		onComplete: $root.controller.callbackCounter.get()
+	} --><!-- /ko -->
+
+	<div data-gaia-container="index"></div>
+
+	<!-- ko component: {
+		name: 'footer',
+		onComplete: $root.controller.callbackCounter.get()
+	} --><!-- /ko -->
+
+</div>
