--- a/deploy/htdocs/version/src/inc/style/layout/_layout.scss
+++ b/deploy/htdocs/version/src/inc/style/layout/_layout.scss
@@ -32,22 +32,24 @@ body {
 }
 
 /**
- * Define the site frame sizes for the different media queries
- *
+ * Define the root font size for the different media queries
  */
-[data-gaia-container="index"] {
-	@include center-block();
-	width: 100%;
-
-	@include respond-to(LARGE) {
-		max-width: $smallSiteFrame;
-	}
-
-	@include respond-to(X_LARGE) {
-		max-width: $mediumSiteFrame;
-	}
-
-	@include respond-to(XX_LARGE) {
-		max-width: $largeSiteFrame;
+@include respond-to(SMALL) {
+	:root {
+		font-size: $baseFontSize * .7;
 	}
 }
+
+@include respond-to(LARGE) {
+	:root {
+		font-size: $baseFontSize;
+	}
+}
+
+/**
+ * All layout imports
+ */
+@import 'site-frame';
+
+
+
