--- a/deploy/htdocs/version/src/inc/script/app/component/header/header.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/header/header.html
@@ -1,3 +1,5 @@
 <div class="component-header">
-	<p>Component header creation succesful! Enjoy!</p>
+	<h1 class="logo primary"> <!-- 'primary' or 'inverted' -->
+		<span class="icon" data-bind="icon: 'logo'"></span>
+	</h1>
 </div>
