--- a/deploy/htdocs/version/src/inc/style/utility/_variables.scss
+++ b/deploy/htdocs/version/src/inc/style/utility/_variables.scss
@@ -34,6 +34,7 @@ $smallSiteFrame: 1280px;
 $colorPrimary: #032d51;
 $colorSecondary: #0098d8;
 $colorTertiary: #0db39f;
+$colorQuaternary: #818285;
 
 $colorWhite: #fff;
 
