--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -3,3 +3,5 @@
 @import "block/block-hero-main";
 @import "header";
 @import "footer";
+@import "button/button-menu";
+@import "button/button-call-to-reach";
