Add the footer component

--- a/deploy/htdocs/version/src/inc/script/app/component/footer/footer.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/footer/footer.html
@@ -1,3 +1,81 @@
-<div class="component-footer">
-
-</div>
+<footer class="component-footer">
+	<section class="top-section">
+		<h1 class="logo white"> <!-- 'primary' or 'inverted' -->
+			<span class="icon" data-bind="icon: 'logo'"></span>
+		</h1>
+		<ul class="contact-options">
+			<li class="contact-option">spectrumreach@speacktrumreach.com</li>
+			<li class="contact-option">1-844-TO-REACH</li>
+		</ul>
+	</section>
+	<section class="middle-section">
+		<nav class="call-to-actions left">
+			<ul class="full-list">
+				<li>
+					<a href="#">Charter</a>
+				</li>
+				<li>
+					<a href="#">Spectrum</a>
+				</li>
+				<li>
+					<a href="#">Spectrum Business</a>
+				</li>
+			</ul>
+		</nav>
+		<nav class="call-to-actions middle">
+			<ul class="half-list">
+				<li>
+					<a href="#">About Spectrum Reach</a>
+				</li>
+				<li>
+					<a href="#">Careers</a>
+				</li>
+				<li>
+					<a href="#">Careers Business</a>
+				</li>
+				<li>
+					<a href="#">My Bright Rewards</a>
+				</li>
+				<li>
+					<a href="#">Bill Pay</a>
+				</li>
+			</ul>
+			<ul class="half-list">
+				<li>
+					<a href="#">Brighthouse Business</a>
+				</li>
+				<li>
+					<a href="#">Privacy Policy</a>
+				</li>
+				<li>
+					<a href="#">Spectrum Reach Terms</a>
+				</li>
+				<li>
+					<a href="#">Time Warner Terms</a>
+				</li>
+			</ul>
+		</nav>
+		<nav class="call-to-actions right">
+			<ul class="full-list">
+				<li>
+					<a href="#">
+						<span class="icon" data-bind="icon: 'twitter'"></span>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="icon" data-bind="icon: 'youtube'"></span>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="icon" data-bind="icon: 'linkedin'"></span>
+					</a>
+				</li>
+			</ul>
+		</nav>
+	</section>
+	<section class="bottom-section">
+		<p class="copyright">@Charter Communications</p>
+	</section>
+</footer>
