--- a/deploy/htdocs/version/src/inc/style/layout/_site-frame.scss
+++ b/deploy/htdocs/version/src/inc/style/layout/_site-frame.scss
@@ -6,13 +6,13 @@
 	/**
 	 * Define the site frame sizes for the different media queries
 	 */
-	@include respond-to(LARGE) {
-		max-width: $smallSiteFrame;
-	}
-
-	@include respond-to(X_LARGE) {
-		max-width: $mediumSiteFrame;
-	}
+	//@include respond-to(LARGE) {
+	//	max-width: $smallSiteFrame;
+	//}
+	//
+	//@include respond-to(X_LARGE) {
+	//	max-width: $mediumSiteFrame;
+	//}
 
 	@include respond-to(XX_LARGE) {
 		max-width: $largeSiteFrame;
