--- a/deploy/htdocs/version/src/inc/style/component/_footer.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_footer.scss
@@ -1,4 +1,123 @@
 .component-footer {
-	@include size(100%, 650px);
-	background: blue;
+	@include size(100%, auto);
+	padding: 0 $sizeGrid * 3;
+	background: $colorPrimary;
+
+	.top-section {
+		@include size(100%, auto);
+		padding: $sizeGrid * 2 0;
+		display: flex;
+		justify-content: space-between;
+		position: relative;
+
+		&:after {
+			@include size(100%, 1px);
+			@include pos(auto, auto, 0, 50%);
+			transform: translateX(-50%);
+			position: absolute;
+			content: '';
+			background: rgba($colorWhite, .1);
+		}
+	}
+
+	.middle-section,
+	.bottom-section {
+		font-size: 0;
+		vertical-align: top;
+		padding: $sizeGrid * 2 0;
+	}
+
+	.contact-options {
+		@extend %reset-list;
+		@include size(auto, $sizeGrid);
+		line-height: $sizeGrid;
+		white-space: nowrap;
+	}
+
+	.contact-option {
+		color: #fff;
+		font: 400 1.6rem/1 $fontOpenSans;
+		display: inline-block;
+		vertical-align: middle;
+
+		&:not(:first-child){
+			margin-left: $sizeGrid * 2;
+		}
+	}
+
+	.copyright {
+		font: 400 1.4rem / 1 $fontOpenSans;
+		color: $colorSecondary;
+	}
+
+	.call-to-actions {
+		display: inline-block;
+		vertical-align: top;
+		font-size: 0;
+		color: #fff;
+
+		ul {
+			@extend %reset-list;
+			display: inline-block;
+			vertical-align: top;
+
+			&.full-list {
+				width: 100%;
+			}
+
+			&.half-list {
+				width: 50%;
+			}
+		}
+
+		a {
+			text-decoration: none;
+		}
+
+		&.left {
+			@include size(40%, auto);
+
+			li {
+				display: block;
+				margin-bottom: $sizeGrid / 4;
+			}
+
+			a {
+				font: 400 1.8rem / 1 $fontOpenSans;
+				color: $colorWhite;
+			}
+		}
+
+		&.middle{
+			@include size(calc(60% - #{$sizeGrid * 3}), auto);
+
+			li {
+				display: block;
+				margin-bottom: $sizeGrid / 2;
+			}
+
+			a {
+				font: 400 1.4rem / 1 $fontOpenSans;
+				color: $colorSecondary;
+			}
+		}
+
+		&.right{
+			@include size($sizeGrid * 3, auto);
+
+			li {
+				@include size($sizeGrid);
+				display: inline-block;
+				position: relative;
+			}
+
+			a {
+				color: $colorSecondary;
+			}
+
+			.icon {
+				@include abs-center($sizeGrid / 2);
+			}
+		}
+	}
 }
