Add the blockImageWithContent module

--- a/deploy/htdocs/version/src/inc/script/app/component/header/header.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/header/header.html
@@ -9,6 +9,7 @@
 			name: 'button/button-call-to-reach',
 			onComplete: $root.controller.callbackCounter.get(),
 			options: {
+				icon: 'contact',
 				action: {
 					label: '1-884-TO-REACH',
 					title: 'Call us!',
