--- a/deploy/htdocs/version/src/inc/style/asset/_icon.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_icon.scss
@@ -2,6 +2,10 @@
 	vertical-align: middle;
 	display: inline-block;
 
+	.semi-transparent {
+		opacity: .3
+	}
+
 	svg {
 		@include size(100%);
 		display: block;
