--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -5,3 +5,6 @@
 @import "footer";
 @import "button/button-menu";
 @import "button/button-call-to-reach";
+@import "button/button-start-advertising";
+@import "block/block-image-with-content";
+@import "button/button-main";
