--- a/deploy/htdocs/version/src/inc/style/component/button/_button-call-to-reach.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-call-to-reach.scss
@@ -1,16 +1,17 @@
 .component-button-call-to-reach {
 	@include size(auto,  $sizeGrid * 2);
 	text-transform: uppercase;
-	background: $colorWhite;
 	color: $colorPrimary;
 	padding: 0 $sizeGrid / 2;
 
 	.text {
 		font: 700 1.2rem / 1 $fontOpenSans;
+		vertical-align: middle;
+		display: inline-block;
 	}
 
 	.icon {
-		@include size($sizeGrid / 2);
-		margin-left: $sizeGridSecondary;
+		@include size($sizeIcon);
+		margin-right: $sizeGrid / 2;
 	}
 }
