--- a/deploy/htdocs/version/src/inc/style/component/button/_button-menu.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-menu.scss
@@ -1,6 +1,7 @@
 .component-button-menu {
-	@include size($sizeGrid * 4,  $sizeGrid * 2);
+	@include size($sizeGrid * 5, $sizeGrid * 2);
 	text-transform: uppercase;
+	text-align: left;
 	background: $colorPrimary;
 	color: $colorWhite;
 
@@ -8,8 +9,16 @@
 		vertical-align: middle;
 	}
 
+	.seperator {
+		@include size(1px, 4rem);
+		background: rgba(#fff, .2);
+		display: inline-block;
+		margin-left: $sizeGrid;
+	}
+
 	.text {
 		font: 700 1.2rem / 1 $fontOpenSans;
+		margin-left: $sizeGrid;
 	}
 
 	.icon {
