--- a/deploy/htdocs/version/src/inc/template/index.html
+++ b/deploy/htdocs/version/src/inc/template/index.html
@@ -12,4 +12,21 @@
 		onComplete: $root.controller.callbackCounter.get()
 	} --><!-- /ko -->
 
+	<!-- ko component: {
+		name: 'button/button-start-advertising',
+		onComplete: $root.controller.callbackCounter.get(),
+		options: {
+			action: {
+				label: 'START ADVERTISING TODAY',
+				title: 'Start advertising today!',
+				event: function(){console.log('start advertising')}
+			},
+			size: $root.ButtonSize.LARGE,
+			disabled: $root.startAdvertisingDisabled
+		}
+	} --><!-- /ko -->
+
+	<div class="grid" data-bind="foreach: new Array(40)">
+		<div class="row"></div>
+	</div>
 </div>
