--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-image-with-content/block-image-with-content.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-image-with-content/block-image-with-content.html
@@ -15,8 +15,7 @@
 				]
 			],
 			state: $root.deviceState()
-		},
-		" alt="background image">
+		}" alt="background image">
 	</figure>
 	<aside class="content">
 		<h4 class="heading heading-06">
