Add the blockMap module

--- a/deploy/htdocs/version/src/inc/style/asset/_asset.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_asset.scss
@@ -5,5 +5,7 @@
 @import 'form';
 @import 'list';
 @import 'logo';
+@import 'helper';
+@import 'pagination-number';
 //@import 'scrollbar';
 //@import 'grid';
