--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -19,3 +19,4 @@
 @import "block/block-image-with-content";
 @import "button/button-main";
 @import "block/block-small-info";
+@import "block/block-map";
