--- a/deploy/htdocs/version/src/inc/style/utility/_variables.scss
+++ b/deploy/htdocs/version/src/inc/style/utility/_variables.scss
@@ -50,6 +50,7 @@ $colorEnterprise: #500778;
 
 $colorWhite: #fff;
 $colorBorder: #e0e0e0;
+$colorMapBackground: #f8f8f8;
 
 // Z-indexes
 $layout: content, header;
