--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -21,3 +21,4 @@
 @import "block/block-small-info";
 @import "block/block-map";
 @import "map-slider";
+@import "block/block-image-call-to-actions";
