--- a/deploy/htdocs/version/src/inc/style/utility/_variables.scss
+++ b/deploy/htdocs/version/src/inc/style/utility/_variables.scss
@@ -53,4 +53,4 @@ $colorBorder: #e0e0e0;
 $colorMapBackground: #f8f8f8;
 
 // Z-indexes
-$layout: content, header;
+$layout: content, header, pageLoader;
