--- a/deploy/htdocs/version/src/inc/template/index.html
+++ b/deploy/htdocs/version/src/inc/template/index.html
@@ -2,19 +2,24 @@
 
 	<!-- ko component: {
 		name: 'header',
-		onComplete: $root.controller.callbackCounter.get()
+		onComplete: $root.controller.callbackCounter.get($root.controller.handleHeaderReady.bind($root.controller))
 	} --><!-- /ko -->
 
 	<div data-gaia-container="index"></div>
 
 	<!-- ko component: {
 		name: 'footer',
-		onComplete: $root.controller.callbackCounter.get()
+		onComplete: $root.controller.callbackCounter.get($root.controller.handleFooterReady.bind($root.controller))
+	} --><!-- /ko -->
+
+	<!-- ko component: {
+		name: 'page-loader',
+		onComplete: $root.controller.callbackCounter.get($root.controller.handlePageLoaderReady.bind($root.controller))
 	} --><!-- /ko -->
 
 	<!-- ko component: {
 		name: 'button/button-start-advertising',
-		onComplete: $root.controller.callbackCounter.get(),
+		onComplete: $root.controller.callbackCounter.get($root.controller.handleStartAdvertisingReady.bind($root.controller)),
 		options: {
 			action: {
 				label: 'START ADVERTISING TODAY',
