Added the latest block

--- a/deploy/htdocs/version/src/inc/script/app/component/header/header.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/header/header.html
@@ -1,4 +1,4 @@
-<div class="component-header">
+<header class="component-header">
 
 	<h1 class="logo primary"> <!-- 'primary' or 'inverted' -->
 		<span class="icon" data-bind="icon: 'logo'"></span>
@@ -35,4 +35,4 @@
 		} --><!-- /ko -->
 	</div>
 
-</div>
+</header>
