--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -23,3 +23,6 @@
 @import "map-slider";
 @import "block/block-image-call-to-actions";
 @import "page-loader";
+@import "block/block-latest";
+@import "latest-article-teaser";
+@import "button/button-tag";
