--- a/deploy/htdocs/version/src/inc/style/component/_map-slider.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_map-slider.scss
@@ -33,7 +33,7 @@
 			justify-content: center;
 			align-items: center;
 			text-align: center;
-			background: $colorMapBackground;
+			background: $colorLightGrey;
 
 			.label {
 				font: 400 1.4rem / 1 $fontOpenSans;
