--- a/deploy/htdocs/version/src/inc/style/utility/_variables.scss
+++ b/deploy/htdocs/version/src/inc/style/utility/_variables.scss
@@ -49,8 +49,8 @@ $colorSmallBusinesses: #faa41a;
 $colorEnterprise: #500778;
 
 $colorWhite: #fff;
+$colorLightGrey: #f8f8f8;
 $colorBorder: #e0e0e0;
-$colorMapBackground: #f8f8f8;
 
 // Z-indexes
 $layout: content, header, pageLoader;
