--- a/deploy/htdocs/version/src/inc/script/app/component/button/button-main/button-main.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/button/button-main/button-main.html
@@ -1,3 +1,3 @@
-<button class="component-button-main button">
+<a class="component-button-main button" data-bind="css: size, tap: handleClick, attr: { title: title }">
 	<span class="label">{{label}}</span>
-</button>
+</a>
