--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -26,3 +26,4 @@
 @import "block/block-latest";
 @import "latest-article-teaser";
 @import "button/button-tag";
+@import "block/block-persona-selector";
