--- a/deploy/htdocs/version/src/inc/style/component/block/_block-image-with-content.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-image-with-content.scss
@@ -18,11 +18,11 @@
 		padding: $sizeGrid * 3 $sizeGrid * 3 $sizeGrid * 2 $sizeGrid * 3;
 
 		&:after {
-			@include size(0);
 			position: absolute;
-			border-style: solid;
 			bottom: 0;
 			content: '';
+			//@include size(0);
+			//border-style: solid;
 		}
 	}
 
@@ -43,8 +43,7 @@
 			width: $sizeGrid * 18;
 
 			&:after {
-				border-width: $sizeGrid 0 0 $sizeGrid;
-				border-color: transparent transparent transparent $colorWhite;
+				@include triangle(left, bottom, $colorWhite, $sizeGrid);
 				right: -$sizeGrid;
 			}
 		}
@@ -56,8 +55,7 @@
 			width: $sizeGrid * 18;
 
 			&:after {
-				border-width: 0 0 $sizeGrid $sizeGrid;
-				border-color: transparent transparent $colorWhite transparent;
+				@include triangle(right, bottom, $colorWhite, $sizeGrid);
 				left: -$sizeGrid;
 			}
 		}
