--- a/deploy/htdocs/version/src/inc/style/utility/mixin/_helpers.scss
+++ b/deploy/htdocs/version/src/inc/style/utility/mixin/_helpers.scss
@@ -50,6 +50,43 @@
 	font-feature-settings: "liga" 0;
 }
 
+@mixin triangle($leftOrRight: left, $topOrBottom:top, $color : #000, $size: 10px, $excludeBase: false) {
+	@if $excludeBase == false {
+		display: inline-block;
+		vertical-align: middle;
+		width: 0;
+		height: 0;
+		font: 0/0 serif;
+	}
+
+	@if ($leftOrRight == left) {
+		@if ($topOrBottom == top) {
+			border-top: $size solid #{$color};
+			border-right: $size solid transparent;
+			border-bottom: 0;
+			border-left: 0;
+		}@else if($topOrBottom == bottom) {
+			border-top: $size solid transparent;
+			border-right: 0;
+			border-bottom: 0;
+			border-left: $size solid #{$color};
+		}
+	}@else if($leftOrRight == right){
+		@if ($topOrBottom == top) {
+			border-top: 0;
+			border-right: $size solid #{$color};
+			border-bottom: $size solid transparent;
+			border-left: 0;
+		}@else if($topOrBottom == bottom) {
+			border-top: 0;
+			border-right: 0;
+			border-bottom: $size solid #{$color};
+			border-left: $size solid transparent;
+		}
+	}
+
+}
+
 /**
  * Creates an arrow
  * @param {string} $direction (up) - Arrow direction: up, down, left or right
@@ -58,7 +95,7 @@
  * @param {number} $stretch (1) - Amount of the stretch of the arrow
  * @param {boolean} $exclude-base (false) - Remove the default arrow styling (usefull if you want to modify the direction of the arrow on rollover
  */
-@mixin arrow($direction: up, $color: #000, $size: 10px, $stretch: 1, $excludeBase: false) {
+@mixin arrow($direction: up, $color: #000, $size: 10px, $half: false, $stretch: 1, $excludeBase: false) {
 
 	@if $excludeBase == false {
 		display: inline-block;
@@ -72,23 +109,31 @@
 	$longSize: $size * $stretch;
 
 	@if $direction == down {
-		border-top: $longSize solid #{$color};
+		@if ($half == false) {
+			border-top: $longSize solid #{$color};
+		}
 		border-left: $size solid transparent;
 		border-right: $size solid transparent;
 		border-bottom: 0;
 	} @else if $direction == left {
-		border-top: $size solid transparent;
+		@if ($half == false) {
+			border-top: $size solid transparent;
+		}
 		border-left: 0;
 		border-right: $longSize solid #{$color};
 		border-bottom: $size solid transparent;
 	} @else if $direction == right {
-		border-top: $size solid transparent;
+		@if ($half == false) {
+			border-top: $size solid transparent;
+		}
 		border-left: $longSize solid #{$color};
 		border-right: 0;
 		border-bottom: $size solid transparent;
 	} @else {
 		border-top: 0;
-		border-left: $size solid transparent;
+		@if ($half == false) {
+			border-left: $size solid transparent;
+		}
 		border-right: $size solid transparent;
 		border-bottom: $longSize solid #{$color};
 	}
