--- a/deploy/htdocs/version/src/inc/template/index.html
+++ b/deploy/htdocs/version/src/inc/template/index.html
@@ -31,7 +31,13 @@
 		}
 	} --><!-- /ko -->
 
-	<div class="grid" data-bind="foreach: new Array(40)">
-		<div class="row"></div>
+
+	<div class="grid">
+		<div class="base-grid regular-grid" data-bind="foreach: new Array(40)">
+			<div class="row"></div>
+		</div>
+		<div class="base-grid angle-grid" data-bind="foreach: new Array(40)">
+			<div class="row"></div>
+		</div>
 	</div>
 </div>
