Added triangle on the hero main component

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-persona-selector/block-persona-selector.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-persona-selector/block-persona-selector.html
@@ -3,6 +3,7 @@
 		<img src="data/persona-selector/persona-background-image-1.jpg" alt="background image 1" class="abs-fill">
 	</div>
 	<div class="persona-content-wrapper abs-fill">
+		<div class="background-triangle"></div>
 		<div class="persona-content">
 			<h2 class="heading heading-04">Small Business</h2>
 			<p class="copy copy-01">Want to expand out from advertising on Facebook and Google?</p>
