--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
@@ -1,3 +1,6 @@
 <div class="component-block-hero-main">
 	<img src="data/hero-main/slide-1.jpg" alt="">
+	<div class="slide-content abs-fill">
+		<div class="background-triangle"></div>
+	</div>
 </div>
