--- a/deploy/htdocs/version/src/inc/style/layout/_site-frame.scss
+++ b/deploy/htdocs/version/src/inc/style/layout/_site-frame.scss
@@ -2,6 +2,7 @@
 	@include center-block();
 	@include size(100%, auto);
 	position: relative;
+	overflow: hidden;
 
 	/**
 	 * Define the site frame sizes for the different media queries
