--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -27,3 +27,4 @@
 @import "latest-article-teaser";
 @import "button/button-tag";
 @import "block/block-persona-selector";
+@import "button/button-circle-arrow";
