--- a/deploy/htdocs/version/src/inc/style/component/_latest-article-teaser.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_latest-article-teaser.scss
@@ -24,7 +24,7 @@
 		}
 
 		.tags {
-			transition: opacity .2s ease(easeO211ut);
+			transition: opacity .2s ease(easeOut);
 		}
 
 		.component-button-tag {
