--- a/deploy/htdocs/version/src/inc/template/index.html
+++ b/deploy/htdocs/version/src/inc/template/index.html
@@ -5,11 +5,17 @@
 		onComplete: $root.controller.callbackCounter.get($root.controller.handleHeaderReady.bind($root.controller))
 	} --><!-- /ko -->
 
+
 	<div data-gaia-container="index"></div>
 
 	<!-- ko component: {
 		name: 'footer',
 		onComplete: $root.controller.callbackCounter.get($root.controller.handleFooterReady.bind($root.controller))
+	} --><!-- /ko -->
+
+	<!-- ko component: {
+		name: 'menu',
+		onComplete: $root.controller.callbackCounter.get($root.controller.handleMenuReady.bind($root.controller))
 	} --><!-- /ko -->
 
 	<!-- ko component: {
