--- a/deploy/htdocs/version/src/inc/style/component/_header.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_header.scss
@@ -1,8 +1,11 @@
 .component-header {
-	@include pos(0, 0, auto, 0);
+	@include pos(0, 0, auto, 50%);
 	@include size(100%, $sizeGrid * 2);
-	position: absolute;
+	position: fixed;
+	transform: translateX(-50%);
 	z-index: zindex($layout, header);
+	max-width: $largeSiteFrame;
+	transition: background .2s ease(easeInOut);
 
 	.logo {
 		@include pos(50%, auto, auto, $sizeGrid * 2);
@@ -18,5 +21,9 @@
 		.button {
 			vertical-align: top;
 		}
+	}
+
+	&.enable-solid-background {
+		background: $colorWhite;
 	}
 }
