--- a/deploy/htdocs/version/src/inc/style/utility/_variables.scss
+++ b/deploy/htdocs/version/src/inc/style/utility/_variables.scss
@@ -53,4 +53,4 @@ $colorLightGrey: #f8f8f8;
 $colorBorder: #e0e0e0;
 
 // Z-indexes
-$layout: content, header, pageLoader;
+$layout: content, header, menu, pageLoader;
